CocacolaProject/src/objects/HR_Target__c.object
<CustomObject>
    <fields>
        <fullName>Achievement1__c</fullName>
        <label>達成度合1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement2__c</fullName>
        <label>達成度合2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement3__c</fullName>
        <label>達成度合3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement_Level_And_Challenge1__c</fullName>
        <label>課題および達成水準1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Achievement_Level_And_Challenge2__c</fullName>
        <label>課題および達成水準2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Achievement_Level_And_Challenge3__c</fullName>
        <label>課題および達成水準3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Affiliation__c</fullName>
        <label>所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basis_Of_The_Evaluation__c</fullName>
        <label>評価の根拠等</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Methods1__c</fullName>
        <label>具体的な内容・方法・手段・期限1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Methods2__c</fullName>
        <label>具体的な内容・方法・手段・期限2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Methods3__c</fullName>
        <label>具体的な内容・方法・手段・期限3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domicile_Company__c</fullName>
        <label>本籍会社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duties__c</fullName>
        <label>職務/職種</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>社員番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Year__c</fullName>
        <label>評価年度</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Qualifications__c</fullName>
        <label>等級・資格</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Day__c</fullName>
        <label>面接日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lating1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画から遅れている1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lating2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画から遅れている2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lating3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画から遅れている3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lwadership_Behavior1__c</fullName>
        <formula>&quot;現状に満足せず、（自分が事業主だったら、どうするかという）企業家マインドで、ビジネスの成長機会を発掘している。新しい試みや、失敗から学ぶことを伴うイノベーションを促進している。イノベーションから導き出された新しいソリューションを実際にビジネス化し、実現している。継続的なイノベーションが奨励される環境を作っている。コカ・コーラシステム全体において、イノベーションが迅速に発掘され、実現されるプロセスを構築している。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>行動指標1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lwadership_Behavior2__c</fullName>
        <formula>&quot;携わっているビジネス全体にとって、チャレンジングな戦略や目標を掲げ、関係者を巻き込んでいる。主要ステークホルダーと長期的な協業を可能とする関係を構築している。全体として共通の方向性を目指すために、外部パートナーとの情報共有を推進し、活用している。携わっているビジネス全体および全バリューチェーンで目標を共有している。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>行動指標2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lwadership_Behavior3__c</fullName>
        <formula>&quot;ビジョンの実現に向けた目標および戦略を策定している。短期的な実績および長期的な財務成長へとつながる成果を導き出している。常に組織全体について、結果に対する責任を明確にしている。継続的な成長を可能とする環境を作っている。成長のために必要な投資（リソース配分）の決断をしている。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>行動指標3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Year_End1__c</fullName>
        <label>今期の成果（期末）1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Year_End2__c</fullName>
        <label>今期の成果（期末）2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Year_End3__c</fullName>
        <label>今期の成果（期末）3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personnel_Evaluators_End_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事評価者(期末)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personnel_Evaluators_Middle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personnel_Evaluators_Middle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事評価者(中間)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personnel_Evaluators_End_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personnel_Evaluators__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事評価者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personnel_Evaluators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画通りである1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画通りである2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画通りである3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank1__c</fullName>
        <label>一次評価ランク1</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank2__c</fullName>
        <label>一次評価ランク2</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank3__c</fullName>
        <label>一次評価ランク3</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_And_Comment_Middle1__c</fullName>
        <label>進捗状況・コメント（中間）1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress_And_Comment_Middle2__c</fullName>
        <label>進捗状況・コメント（中間）2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress_And_Comment_Middle3__c</fullName>
        <label>進捗状況・コメント（中間）3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rank_DP__c</fullName>
        <formula>&quot;一部のリーダーシップビヘイビア（技能、知識、能力）を発揮しているが、すべてを一貫して発揮しているわけではない。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価ランク_DP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_EP__c</fullName>
        <formula>&quot;リーダーシップビヘイビア（技能、知識、能力）の発揮において優れており、全社的な模範となる行動である。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価ランク_EP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_NP__c</fullName>
        <formula>&quot;リーダーシップビヘイビア（技能、知識、能力）を一貫して発揮することができていない。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価ランク_NP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_SP__c</fullName>
        <formula>&quot;リーダーシップビヘイビア（技能、知識、能力）を十分に発揮している。&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価ランク_SP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_The_Plan1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画の見直しが必要1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_The_Plan2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画の見直しが必要2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_The_Plan3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>計画の見直しが必要3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Evaluation1__c</fullName>
        <label>自己評価1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Evaluation2__c</fullName>
        <label>自己評価2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Evaluation3__c</fullName>
        <label>自己評価3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>申請者作成中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>評価者確認中(半年)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>評価申請（年末）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>評価者確認中(年末)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>人事評価申請</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>HR対象者名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Agency_Evaluation</fullName>
        <active>true</active>
        <label>代理評価</label>
    </recordTypes>
    <recordTypes>
        <fullName>LoL_Leader_of_Leaders</fullName>
        <active>true</active>
        <label>リーダー (LoL: Leader of Leaders)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBO_nonMgr</fullName>
        <active>true</active>
        <label>一般ユーザー (MBO)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>